# py-nsql

./: .gitignore  README.md  pyproject.toml
cautils/: __init__.py  __main__.py  cli.py  credentials.py  exceptions.py  opts.py  parser.py  queries.py  thin_xml.py  utils.py  xog.py
nsql/: __init__.py  __main__.py  cli.py  parser.py  utils.py  xog.py
tests/: test_cautils.py  test_nsql.py
