[tool.poetry]
name = "cautils"
version = "0.2.1"
description = ""
authors = ["Mauro M. <24578415+Bocanada@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
httpx = "^0.23.0"
rich = "^12.5.1"
typer = {extras = ["all"], version = "^0.6.1"}
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
mypy = "^0.971"
lxml-stubs = "^0.4.0"

[tool.poetry.scripts]
cautils = "cautils.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
